read me and generate_points

--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,6 @@ expert_demos/
 
 coordinates/coords/*
 coordinates/images/*
+p3po/data_generation/videos/*
+processed_data/points/*
+processed_data/graphs/*
