--- a/conda_env.yml
+++ b/conda_env.yml
@@ -1,4 +1,4 @@
-name: p3po
+name: p3-po
 channels:
   - defaults
 dependencies:
@@ -9,10 +9,7 @@ dependencies:
   - pyparsing=2.4.7
   - jupyterlab=3.0.14
   - scikit-image=0.18.1
-  - nvidia::cudatoolkit=11.3
-  - pytorch::pytorch
-  - pytorch::torchvision
-  - pytorch::torchaudio
+  - llvm-openmp=19.1.0
   - pip:
     - pre-commit
     - black
@@ -36,4 +33,11 @@ dependencies:
     - decord
     - mujoco
     - dm_control
-    - diffusers==0.11.1
+    - diffusers==0.15.0
+    - ipywidgets
+    - ipycanvas
+    - accelerate
+    - torch
+    - torchvision
+    - torchaudio
+    - xformers
