--- a/baku/cfgs/agent/baku.yaml
+++ b/baku/cfgs/agent/baku.yaml
@@ -13,9 +13,8 @@ obs_type: ${obs_type}
 encoder_type: ${encoder_type}
 policy_type: ${policy_type}
 policy_head: ${policy_head}
-pixel_keys: ${suite.pixel_keys}
+training_keys: ${training_keys}
 proprio_key: ${suite.proprio_key}
-feature_key: ${suite.feature_key}
 use_proprio: ${use_proprio}
 train_encoder: true
 norm: false
