--- a/p3po/cfgs/suite/metaworld.yaml
+++ b/p3po/cfgs/suite/metaworld.yaml
@@ -14,14 +14,14 @@ hidden_dim: 256
 # train settings
 num_train_steps: 601000
 log_every_steps: 1000
-save_every_steps: 200000
-history: false
+save_every_steps: 10000
+history: true
 history_len: 10
 
 # eval
-eval_every_steps: 50000
+eval_every_steps: 10000
 num_eval_episodes: 10
-eval_history_len: 5
+eval_history_len: 10
 
 # obs_keys
 pixel_keys: ['pixels']
@@ -38,8 +38,8 @@ task_make_fn:
   frame_stack: ${suite.frame_stack}
   action_repeat: ${suite.action_repeat}
   seed: ${seed}
-  height: 84
-  width: 84
+  height: 512
+  width: 512
   max_episode_len: ??? # to be specified later
   max_state_dim: ??? # to be specified later
   eval: ${eval}
