--- a/.gitignore
+++ b/.gitignore
@@ -175,6 +175,7 @@ expert_demos/
 coordinates/coords/*
 coordinates/images/*
 p3po/data_generation/videos/*
+processed_data/*
 processed_data/points/*
 processed_data/graphs/*
 expert_demos/metaworld/*
