--- a/p3po/cfgs/suite/p3po.yaml
+++ b/p3po/cfgs/suite/p3po.yaml
@@ -4,7 +4,7 @@ defaults:
 
 root_dir: /home/ademi/P3PO
 
-task_name: "1014_pushdonut"
+task_name: "donutv3"
 device: "cuda"
 
 width: -1
@@ -13,7 +13,7 @@ image_size_multiplier: 1
 
 ensemble_size: 8
 dift_layer: 1
-dift_steps: 50
+dift_steps: 5
 
 num_tracked_points: 1
 num_fingertip_points: 4
