--- a/p3po/cfgs/suite/xarm_env.yaml
+++ b/p3po/cfgs/suite/xarm_env.yaml
@@ -28,7 +28,7 @@ eval_history_len: 5
 action_after_steps: 1 #8
 
 # obs_keys
-pixel_keys: ["pixels0", "pixels1", "pixels4", "pixels5"]
+pixel_keys: ["pixels1"]
 proprio_key: "proprioceptive"
 feature_key: "features"
 
@@ -43,8 +43,8 @@ task_make_fn:
   frame_stack: ${suite.frame_stack}
   action_repeat: ${suite.action_repeat}
   seed: ${seed}
-  height: 128
-  width: 128
+  height: 360 #128
+  width: 360 #128
   max_episode_len: ??? # to be specified later
   max_state_dim: ??? # to be specified later
   use_egocentric: false
