--- a/p3po/cfgs/config.yaml
+++ b/p3po/cfgs/config.yaml
@@ -7,7 +7,7 @@ defaults:
 
 # wandb
 project_name: 'p3po'
-run_name: 'open_oven_1022'
+run_name: 'open_oven_1028'
 
 # Root Dir
 root_dir: /home/ademi/P3PO
@@ -25,7 +25,7 @@ batch_size: 16
 obs_type: "features" # pixels, features
 training_keys: ['graph']
 depth_keys: ['depth']
-num_demos_per_task: 50
+num_demos_per_task: 100
 encoder_type: 'resnet' # base, resnet
 policy_type: 'gpt' # mlp, gpt
 policy_head: deterministic # deterministic, gmm, bet, diffusion, vqbet
@@ -51,6 +51,8 @@ bc_weight: null
 
 use_wandb: false
 point_dimensions: 3
+p3po_task_name: "open_oven_1025_densehandle"  
+num_tracked_points: 54
 
 hydra:
   run:
