--- a/p3po/cfgs/suite/p3po.yaml
+++ b/p3po/cfgs/suite/p3po.yaml
@@ -4,7 +4,7 @@ defaults:
 
 root_dir: /home/ademi/P3PO
 
-task_name: "open_oven_1022"
+task_name: "pick_block_20241103a_30hz_nooccpoints"
 device: "cuda"
 
 width: -1
@@ -15,6 +15,7 @@ ensemble_size: 8
 dift_layer: 1
 dift_steps: 5
 
-num_tracked_points: 10
+num_tracked_points: 27
 num_fingertip_points: 4
 dimensions: 3
+unproject_depth: true
