rename unproject_depth to keypoints_type; move op to cpu in correspondence computation for now

--- a/p3po/cfgs/config.yaml
+++ b/p3po/cfgs/config.yaml
@@ -55,7 +55,7 @@ use_wandb: false
 point_dimensions: 3
 p3po_task_name: "open_oven_1025_densehandle"  
 num_tracked_points: 54
-unproject_depth: true
+keypoints_type: 3
 
 hydra:
   run:
