enale training on teleop data

--- a/p3po/cfgs/suite/dexterous.yaml
+++ b/p3po/cfgs/suite/dexterous.yaml
@@ -50,3 +50,4 @@ task_make_fn:
   eval: ${eval} # eval true mean use robot
   raw_data_path: ${raw_data_path}
   delta_actions: ${delta_actions}
+  joint_space_control: ${joint_space_control}
