--- a/p3po/cfgs/config_eval.yaml
+++ b/p3po/cfgs/config_eval.yaml
@@ -20,7 +20,7 @@ batch_size: 64
 # experiment
 obs_type: "features" # pixels, features
 training_keys: ['graph']
-depth_keys: ['depth']
+depth_keys: []
 num_demos_per_task: 50
 encoder_type: 'resnet' # base, resnet
 policy_type: 'gpt' # mlp, gpt
