--- a/p3po/cfgs/suite/p3po.yaml
+++ b/p3po/cfgs/suite/p3po.yaml
@@ -4,7 +4,7 @@ defaults:
 
 root_dir: /mnt/robotlab/siddhant/P3PO
 
-task_name: '1218_pick_bottle_from_fridge' #'pick_white_plate_cam2'  #'11_05_pick_white_plate_anything' #'pick_white_plate_cam1' #"pick_plate_from_rack"
+task_name: '1220_pick_bottle_from_fridge_12p' #'1220_pick_bottle_side_door' #'1220_pick_up_bottle' #'pick_white_plate_cam2'  #'11_05_pick_white_plate_anything' #'pick_white_plate_cam1' #"pick_plate_from_rack"
 device: "cuda"
 
 width: -1
@@ -15,4 +15,4 @@ ensemble_size: 8
 dift_layer: 1
 dift_steps: 50
 
-num_points: 10
+num_points: 12
